Resolves: fdo#63802 return true if we have known empty context

i.e. false for "we can't provide context", and true for
"we can provide context, even if there isn't any"

Still looks to me that there's a bug in the si-phonetic-dynamic
im (or something in the stack) that assumes that returning
false once means it will always return false and give up
for ever

fix indent while I'm at it

also let si-phonetic-dynamic survive libreoffice losing focus and regain it
cycle and still use surrounding text. It should be safe to report that we can
provide surrounding text but there isn't any during the time window when there
is no focus window, because the focus in event was received but it hasn't
arrived yet because that happens on a postuserevent.

(cherry picked from commit 21fb092398fb21256b0e546e7f38c5e6de4654f2)

Change-Id: I0481c42208953f2a0618aaed7b0d9e9f3e7bda07
Reviewed-on: https://gerrit.libreoffice.org/3608
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>